# Neon-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NeonEngine.sln  NeonEngine.vcxproj  NeonEngine.vcxproj.filters  README.md  libglad.dylib
NeonEngine/: CMakeLists.txt  NeonEngine.vcxproj  NeonEngine.vcxproj.filters  main.cpp  saved_model_code.txt  window.cpp  window.h
NeonEngine/Debug/: vc141.idb
NeonEngine/Debug/NeonEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NeonEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NeonEngine/Dependencies/glad/src/: glad.c
NeonEngine/Docs/: CMakeLists.txt  Doxyfile.in
NeonEngine/NeonEngine/: NeonEngine.cpp  NeonEngine.h  main.h  nepch.cpp  nepch.h  unityFixedUpdateSystem.txt
NeonEngine/NeonEngine-test/Core/Memory/: IAllocator-test.cpp  LinearAllocator-test.cpp
NeonEngine/NeonEngine/App/: Application.cpp  Application.h  EventManager.cpp  EventType.h  EventTypes.h  IWindow.h  Timer.cpp  application.cpp  application.h  eventManager.h  timer.cpp  timer.h
NeonEngine/NeonEngine/App/Input/: Input.cpp  Input.h  Keyboard.cpp  Mouse.cpp  Mouse.h  input.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
NeonEngine/NeonEngine/BaseECS/: CameraComponent.cpp  CameraComponent.h  CameraSystem.cpp  CameraSystem.h  TranformComponent.cpp  TransformComponent.h
NeonEngine/NeonEngine/Core/: Core.h
NeonEngine/NeonEngine/Core/ECS/: ECSManager.cpp  ECSManager.h  ECSManager.tpp  ECSMemory.cpp  ECSMemory.h  ECSTypes.h  Entity.cpp  Entity.h  Entity.tpp  EntityManager.cpp  EntityManager.h  IComponent.h  ISystem.h
NeonEngine/NeonEngine/Core/Events/: EventManager.cpp  EventManager.h  EventManager.tpp  EventTypes.cpp  EventTypes.h
NeonEngine/NeonEngine/Core/Memory/: FreeList.h  Helpers.h  IAllocator.cpp  IAllocator.h  LinearAllocator.cpp  LinearAllocator.h  PoolAllocator.cpp  PoolAllocator.h
NeonEngine/NeonEngine/Core/Time/: Timer.cpp  Timer.h
NeonEngine/NeonEngine/Core/Types/: Callback.h  Singleton.h
NeonEngine/NeonEngine/Graphics/Cameras/: Camera.cpp  Camera.h
NeonEngine/NeonEngine/Graphics/Entities/: gameobject.h  mesh.h  model.cpp  model.h  renderable3d.cpp  renderable3d.h  renderableCollection.cpp  renderableCollection.h  transform.h
NeonEngine/NeonEngine/Graphics/Layers/: Layer.h  LayerStack.h  layer.cpp  layer.h  layerStack.cpp  layerStack.h
NeonEngine/NeonEngine/Graphics/Renderers/: BufferLayout.h  IGraphicContext.h  IIndexBuffer.h  IProgram.cpp  IProgram.h  IRendererAPI.cpp  IRendererAPI.h  ITexture.h  IVertexArray.h  IVertexBuffer.h  Renderer.cpp  Renderer.h
NeonEngine/NeonEngine/Graphics/Shaders/: IShader.h  material.cpp  material.h
NeonEngine/NeonEngine/Graphics/lights/: ambientLight.cpp  ambientLight.h  light.h
NeonEngine/NeonEngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
NeonEngine/NeonEngine/Shaders/: material.h
NeonEngine/NeonEngine/Utils/Debug/: Utils.h  logger.cpp  logger.hpp  utils.h
NeonEngine/NeonEngine/Utils/FileUtils/: FileUtils.cpp  FileUtils.h  fileUtils.h
NeonEngine/NeonEngine/Utils/obj_loader/: objloader.h
NeonEngine/NeonEngine/app/: app.cpp  app.h  application.cpp  application.h  eventManager.cpp  eventManager.h  eventTypes.h  timer.cpp  timer.h  window.cpp  window.h
NeonEngine/NeonEngine/app/input/: eventManager.h  input.cpp  input.h  keyboard.h  mouse.cpp  mouse.h
NeonEngine/NeonEngine/core/: Core.h
NeonEngine/NeonEngine/core/Types/: Callback.h
NeonEngine/NeonEngine/core/ecs/: ecs.h
NeonEngine/NeonEngine/graphics/Renderers/: BufferLayout.h  IRendererAPI.h  IVertexBuffer.h  Renderer.h
NeonEngine/NeonEngine/graphics/cameras/: camera.cpp  camera.h
NeonEngine/NeonEngine/graphics/entities/: gameobject.cpp  gameobject.h  mesh.cpp  mesh.h  model.h  renderable3d.cpp  renderable3d.h  renderableCollection.cpp  renderableCollection.h  transform.cpp  transform.h  vertex.h
NeonEngine/NeonEngine/graphics/layers/: layer.cpp  layer.h
NeonEngine/NeonEngine/graphics/lights/: ambientLight.cpp  ambientLight.h  light.h
NeonEngine/NeonEngine/shaders/: material.h
NeonEngine/NeonEngine/utils/debug/: utils.h
NeonEngine/NeonEngine/utils/fileUtils/: fileUtils.cpp
NeonEngine/NeonEngine/utils/logging/: logger.h
NeonEngine/NeonEngine/utils/obj_loader/: objloader.cpp  objloader.h
NeonEngine/dependencies/glad/src/: glad.c
NeonEngine/src/: main.cpp
NeonEngine/src/app/: app.cpp  app.h  scene.cpp  scene.h  window.cpp  window.h
NeonEngine/src/app/input/: command.h  eventManager.h  input.cpp  input.h  inputDevice.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
NeonEngine/src/core/ecs/: ecs.h
NeonEngine/src/graphics/buffers/: designsystem.sublime-workspace  indexBuffer.cpp  indexBuffer.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.h
NeonEngine/src/graphics/cameras/: camera.cpp  camera.h
NeonEngine/src/graphics/entities/: entity_notes.txt  gameobject.cpp  gameobject.h  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  renderable.h  renderable3d.cpp  renderable3d.h  renderableCollection.cpp  renderableCollection.h  transform.cpp  transform.h  vertex.h
NeonEngine/src/graphics/renderers/: forwardRenderer.cpp  forwardRenderer.h
NeonEngine/src/res/shaders/: basicFShader.glsl  basicVShader.glsl  instancedFShader.glsl  instancedVShader.glsl  lightingFShader.glsl  textureFShader.glsl  textureVShader.glsl
NeonEngine/src/shaders/: material.cpp  material.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h
NeonEngine/src/tests/: object.cpp  object_test.cpp  simple-rectangle.cpp  simple-rectangle.h  tiny-obj.cpp  tiny-obj.h
NeonEngine/src/utils/: fileUtils.cpp
NeonEngine/src/utils/debugging/: debug.h  printing_functions.cpp
NeonEngine/src/utils/file_utils/: fileUtils.cpp  (+1 more)
SandBox/: CMakeLists.txt  SandBox.cpp
SandBox/res/settings/: testSceneSettings.init
SandBox/res/shaders/: 2dFShader.glsl  2dVShader.glsl  basicFShader.glsl  basicVShader.glsl  instancedFShader.glsl  instancedVShader.glsl  lightingFShader.glsl  textureFShader.glsl  textureVShader.glsl
(+82 files in other folders)
